# RechoMem

./: AGENT.md  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
.sisyphus/drafts/: rechomem.md
src/: config.rs  embedding.rs  error.rs  ingest.rs  main.rs  mcp.rs  retrieval.rs  types.rs
src/storage/: AGENTS.md  jsonl.rs  mod.rs  sqlite.rs  vector.rs
