[package]
name = "rechomem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Recursive Echo Memory: a 3-layer semantic memory engine for LLMs"

[dependencies]
anyhow = "1.0"
async-openai = "0.28"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.2", features = ["client", "server", "macros", "transport-io", "schemars"] }
futures = "0.3"
lancedb = "0.27"
arrow-array = "57.0"
arrow-schema = "57.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = "z"          # 优先体积优化（'s' 可作为备选，保留更多矢量化）
lto = true               # 链接时优化，跨 crate 消除冗余
codegen-units = 1        # 单代码生成单元，提升优化深度（编译时间增加）
strip = true             # 移除所有符号与 debuginfo
debug = false            # 禁用调试信息
panic = "abort"          # panic 时直接中止，移除 unwinding 代码